--- a/Project/Project 4 - Travel Website/destinations.html
+++ b/Project/Project 4 - Travel Website/destinations.html
@@ -343,19 +343,19 @@
 
                                 <li>
                                     <a href="#" class="social-link">
-                                        <i class="fab fa-instagram"></i>
+                                        <i class="fa fa-instagram"></i>
                                     </a>
                                 </li>
 
                                 <li>
                                     <a href="#" class="social-link">
-                                        <i class="fab fa-facebook"></i>
+                                        <i class="fa fa-facebook"></i>
                                     </a>
                                 </li>
 
                                 <li>
                                     <a href="#" class="social-link">
-                                        <i class="fab fa-twitter"></i>
+                                        <i class="fa fa-twitter"></i>
                                     </a>
                                 </li>
 
@@ -489,5 +489,6 @@
 <!-- ionicon Link -->
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 
 </html>
